--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,10 @@ spring.artemis.password=simetraehcapa
 
 spring.jackson.serialization.write-dates-as-timestamps=false
 spring.jackson.serialization.write-date-timestamps-as-nanoseconds=true
+
+#spring.datasource.username=beer_order_service
+#spring.datasource.password=password
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/beerorderservice?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+#spring.jpa.database=mysql
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
