--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,8 @@ spring.artemis.password=simetraehcapa
 spring.jackson.serialization.write-dates-as-timestamps=false
 spring.jackson.serialization.write-date-timestamps-as-nanoseconds=true
 
+spring.profiles.active=localmysql
+
 #spring.datasource.username=beer_order_service
 #spring.datasource.password=password
 #spring.datasource.url=jdbc:mysql://127.0.0.1:3306/beerorderservice?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
